# mia-kelisap

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
mia-kelisap-api/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
mia-kelisap-api/alembic/: env.py
mia-kelisap-api/alembic/versions/: 32aad94d7309_add_llm_model_reply_style_contact_rules.py  39cf4a7e5cf7_add_is_group_to_conversations.py  48bc4e06b63f_add_debounce_performance_indexes.py  6fb1a8ecdd13_initial.py
mia-kelisap-api/scripts/: seed.py
mia-kelisap-api/src/mia_kelisap/: config.py  database.py  dependencies.py  main.py
mia-kelisap-api/src/mia_kelisap/api/: router.py
mia-kelisap-api/src/mia_kelisap/api/analytics/: router.py  schemas.py  service.py
mia-kelisap-api/src/mia_kelisap/api/auth/: router.py  schemas.py  service.py
mia-kelisap-api/src/mia_kelisap/api/contacts/: router.py  schemas.py  service.py
mia-kelisap-api/src/mia_kelisap/api/conversations/: router.py  schemas.py  service.py
mia-kelisap-api/src/mia_kelisap/api/memory/: router.py  schemas.py  service.py
mia-kelisap-api/src/mia_kelisap/core/: encryption.py  security.py
mia-kelisap-api/src/mia_kelisap/models/: __init__.py  base.py  contact_rule.py  conversation.py  message.py  user.py  user_settings.py  whatsapp_session.py
mia-kelisap-api/src/mia_kelisap/services/: debounce.py  filter.py  llm.py  memory.py
mia-kelisap-api/tests/: conftest.py
mia-kelisap-api/tests/e2e/: test_auth_flow.py
mia-kelisap-api/tests/unit/: test_auth_service.py  test_filter.py
scripts/: dev.sh  (+1 more)
(+93 files in other folders)
